# b3-data

./: .flake8  LICENSE  Makefile  README.md  pyproject.toml  release
.github/workflows/: bump.yml  publish-python-package-pypi.yml
b3_data/: download.py  main.py  upload.py
